--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "geolocation": "^0.2.0",
     "lodash": "^4.17.21"
   }
 }
